# mein

./: README.md  builtin_cd.c  color_related.c  draw_all.c  get_normal.c  sample_0.rt  sol_line3_plane.c  traverse.c
1st_Circle/ft_pf/: ft_printf.c  ft_printf.h
1st_Circle/ft_printf/: ft_pf_utils.c  ft_printf.c
1st_Circle/ft_printf_submit/: Makefile  ft_isalpha.c  ft_isdigit.c  ft_lstdelone.c  ft_lstmap.c  ft_lstsize.c  ft_memchr.c  ft_memset.c  (+12 more)
5th_Circle/webserv/private/jiyun/: CMakeLists.txt  CheckValidity.hpp  Client.cpp  Client.hpp  ClientSocket.cpp  Config.cpp  Config.hpp  ConfigDefines.hpp  ConfigUtils.hpp  ListeningSocket.cpp  Location.cpp  Location.hpp  LocationConfig.cpp  Server.cpp  Server.hpp  ServerBlock.cpp  ServerBlock.hpp  ServerConfig.cpp  ServerConfig.hpp  Socket.cpp  Socket.hpp  Webserv.cpp  Webserv.hpp  defines.hpp  main.cpp
5th_Circle/webserv/private/jiyun/config/: config.conf  present.conf
5th_Circle/webserv/private/jiyun/utils/: CustomException.cpp  CustomException.hpp  MyString.hpp
algorithm/: a.out  djchoi.c  jchoi.c  matrix_jchoi.c  matrix_multi.c  prime_jchoi.c  remote_jchoi.c  tree.c
etc/: a.out  data_1.c  o.c  quick.c  test.c
lab_fdf/: fdf  fdf.c  fdf_input.c  fdf_utils.c
math_again/: matrix.c  matrix_binary_operation.c  matrix_unary_operation.c  minimath.h  struct_vec.h  vector.c  vector_binary_operation.c  vector_projection.c  vector_unary_operation.c
minimath/: main.c  matrix.c  matrix_binary_operation.c  matrix_unary_operation.c  minimath.c  minimath.h  vector.c  vector_binary_operation.c  vector_unary_operation.c
(+553 files in other folders)
